# TrainMedic

./: .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  diagnostic-rules.md
examples/: README.md  batchnorm_train_during_evaluation.py  dropout_active_during_evaluation.py  eval_without_no_grad.py  healthy_forward.py  healthy_gradients.py  healthy_modes.py  healthy_optimizer.py  healthy_updates.py  inf_forward.py  inf_gradient.py  missing_optimizer_parameter.py  missing_optimizer_step.py  model_eval_during_training.py  nan_forward.py  nan_gradient.py  none_gradient.py  parameter_not_updated.py  zero_learning_rate.py
marketing/xiaohongshu/launch-post/: README.md  copywriting.md  generate_assets.py  image-plan.md  validate_assets.py
src/trainmedic/: __init__.py  types.py
src/trainmedic/inspectors/: __init__.py  model.py  modules.py  optimizer.py
src/trainmedic/monitors/: __init__.py  forward.py  gradients.py  modes.py  (+1 more)
tests/: test_forward_monitor.py  test_forward_numerical_rules.py  test_gradient_monitor.py  test_gradient_rules.py  test_import.py  test_mode_monitor.py  test_mode_rules.py  test_optimizer_inspection.py  test_reports.py  test_update_monitor.py  test_update_rules.py
tests/diagnostic_cases/: test_batchnorm_mode_mismatch.py  test_dropout_mode_mismatch.py  test_eval_grad_enabled.py  test_forward_inf.py  test_forward_nan.py  test_gradient_inf.py  test_gradient_nan.py  test_gradient_none.py  test_healthy_optimizer.py  test_missing_optimizer_parameter.py  test_model_eval_during_training.py  test_model_train_during_evaluation.py  test_parameter_not_updated.py  test_step_not_observed.py  test_zero_learning_rate.py
(+9 files in other folders)
